@@ -8,6 +8,7 @@ export(KNNGraphParam)
 export(KmeansParam)
 export(MbkmeansParam)
 export(NNGraphParam)
+export(PamParam)
 export(SNNGraphParam)
 export(SomParam)
 export(TwoStepParam)
@@ -38,6 +39,7 @@ exportClasses(KNNGraphParam)
 exportClasses(KmeansParam)
 exportClasses(MbkmeansParam)
 exportClasses(NNGraphParam)
+exportClasses(PamParam)
 exportClasses(SNNGraphParam)
 exportClasses(SomParam)
 exportClasses(TwoStepParam)
